I am changing alittle css and html

--- a/exercise-incorrect.html
+++ b/exercise-incorrect.html
@@ -12,6 +12,7 @@
     <header>
       <h1 class="red-text">A Demo Page</h1>
       <span>Check out <a href="https://scripted">ScriptEd!</a></span>
+      <p>I do not know what I am doing to this website.....</p>
       <i class="fa fa-caret-left"></i>
     </header>
 
